# websocket-pba

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ws_server  README.md  docker-compose.yml  entrypoint.sh  example.env  inference_profiles_result.json  pyproject.toml  requirements.txt  temp.json  ws_client.js  ws_client.py
deploy/: ws-server-daphne.service
docs/: AWS_COST_ESTIMATES.md  SERVER_BROADCAST.md  TECHNICAL.md  ws_test.html
infrastructure/: COST_ESTIMATION.md  README.md  app.py  bedrock_inference.py  cdk.json  deploy-devlive.sh  deploy-testlive.sh  deploy-uatlive.sh  deploy.sh  env.example  stack.py
llm/: Dockerfile  requirements.txt
llm/src/: index.py
llm/src/appdata/code_guidance/: claim-adjustment-group-codes.json
llm/src/applib/: code_guidance.py  config.py  env_secrets.py  helpers.py  llms.py  state.py  types.py  ws_client.py
llm/src/applib/api/: routes.py
llm/src/applib/graph/: _nodes.py  graph_manager.py  guardrails.py  nodes.py  structured_outputs.py  (+2 more)
ws_server/: manage.py
ws_server/realtime/: __init__.py  consumers.py  presence.py  redis_ownership.py  routing.py  views.py
ws_server/ws_server/: apps.py  asgi.py  dump.rdb  env_bootstrap.py  health.py  health_middleware.py  middleware.py  routing.py  settings.py  urls.py  ws_origin.py  wsgi.py
ws_server/ws_server/applib/: code_guidance.py  config.py  helpers.py  llms.py  state.py  types.py
ws_server/ws_server/realtime/: __init__.py  apps.py  consumers.py  csrf_handler.py  csrf_middleware.py  middleware.py  presence.py  routing.py  serializers.py  session_manager.py  views.py
(+103 files in other folders)
